@@ -1,13 +1,12 @@
 
-# $rcs = ' $Id: Makefile.PL,v 1.34 2005/12/25 20:29:30 Daddy Exp $ ';
+# $rcs = ' $Id: Makefile.PL,v 1.35 2005/12/28 02:05:08 Daddy Exp $ ';
 
 use inc::Module::Install;
 
 name('WWW-Search-Ebay');
 author('Martin Thurn <mthurn@cpan.org>');
 license('perl');
-version(2.217);
-sign(0);
+version(2.218);
 
 requires(perl => 5.005);
 build_requires('Bit::Vector');
@@ -20,15 +19,14 @@ requires('Switch' => 2.10);
 build_requires('Test::More');
 # We need the version that has method agent_name():
 requires('WWW::Search' => 2.529);
-# We need the version that has method category():
-requires('WWW::SearchResult' => 2.066);
+# We need the version that has the bidder and seller methods:
+requires('WWW::SearchResult' => 2.067);
 # We need the version of WWW::Search::Test that exports its tm_
 # functions:
 build_requires('WWW::Search::Test' => 2.265);
 
 check_nmake();      # check and download nmake.exe for Win32
-# &WriteAll;
-&WriteAll(sign => 0);
+&WriteAll;
 
 sub MY::postamble
   {
