@@ -1,4 +1,4 @@
-#line 1 "inc/Module/Install/Base.pm - c:/perl/site/lib/Module/Install/Base.pm"
+#line 1 "inc/Module/Install/Base.pm - C:/perl/site/lib/Module/Install/Base.pm"
 package Module::Install::Base;
 
 # Suspend handler for "redefined" warnings
