@@ -1,4 +1,4 @@
-#line 1 "inc/Module/Install/Fetch.pm - c:/perl/site/lib/Module/Install/Fetch.pm"
+#line 1 "inc/Module/Install/Fetch.pm - C:/perl/site/lib/Module/Install/Fetch.pm"
 package Module::Install::Fetch;
 use Module::Install::Base; @ISA = qw(Module::Install::Base);
 
