@@ -1,4 +1,4 @@
-#line 1 "inc/Module/Install/Metadata.pm - c:/perl/site/lib/Module/Install/Metadata.pm"
+#line 1 "inc/Module/Install/Metadata.pm - C:/perl/site/lib/Module/Install/Metadata.pm"
 package Module::Install::Metadata;
 use Module::Install::Base;
 @ISA = qw(Module::Install::Base);
