@@ -1,6 +1,12 @@
+2005-12-27    <Daddy@C-3PO>
+
+	* lib/WWW/Search/Ebay/ByBidderID.pm: new backend!
+
+	* lib/WWW/Search/Ebay.pm (parse_tree): use new item_number (et al.) attributes in SearchResult
+
 2005-12-25    <Daddy@C-3PO>
 
-	* lib/WWW/Search/Ebay.pm (parse_tree): new returns the item's category number
+	* lib/WWW/Search/Ebay.pm (parse_tree): now returns the item's category number
 
 2005-08-29    <Daddy@C-3PO>
 
